# homeworker-api-client

./: .gitignore  Cargo.toml
src/: lib.rs  models.rs
src/models/: chats.rs  ips.rs  lessons.rs  mod.rs  oauth.rs  schools.rs  todos.rs  users.rs
src/types/: chats.rs  lessons.rs  mod.rs  schools.rs  timetables.rs  todos.rs  users.rs
